--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "@vanilla-extract/css": "^1.15.2",
     "nodemon": "^3.1.1"
+  },
+  "devDependencies": {
+    "@vanilla-extract/next-plugin": "^2.4.1"
   }
 }
