--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server/server.cjs"
+    "start": "nodemon ./src/server/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
     "@vanilla-extract/css": "^1.15.2",
     "nodemon": "^3.1.1"
